feat: Empty Unity 3D Project

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,6 @@ sysinfo.txt
 crashlytics-build.properties
 
 # User Customization Files
-UserSettings/EditorUserSettings.asset
-UserSettings/Layouts/
+SBGames 2023/UserSettings/EditorUserSettings.asset
+SBGames 2023/UserSettings/Layouts/
 
